build: 重构封装构建模板